# node-js

./: BUGS.md  Cargo.toml  README.md
.github/workflows/: release.yml
completions/: _node
docs/: index.html  reference.html  report.html
examples/: arrays.js  async.js  bigint.js  classes.js  collections.js  control.js  fib.js  generators.js  hello.js  objects.js  regexp.js  wordcount.js
man/: node.1  nodeall.1
parity-scripts/: run.sh
parity-scripts/async/: 01_promise_chain.js  02_promise_combinators.js  03_async_await.js  04_microtask_ordering.js  05_nexttick_vs_promise.js  06_queue_microtask.js  07_timers_promises.js  08_error_propagation.js  09_map_basics.js  10_set_basics.js  11_weak_collections.js  12_array_transform.js  13_array_search.js  14_array_mutate.js  15_array_iterators.js  16_functional_pipeline.js  17_memoize.js  18_symbol_iterator.js  19_generators.js  20_async_generators.js  21_group_reduce.js
parity-scripts/data/: 01_float_exponential_threshold.js  02_number_formatting.js  03_integer_bitwise.js  04_bigint.js  05_number_parsing.js  06_nan_infinity.js  07_string_methods.js  08_string_pad_repeat_split.js  09_template_literals.js  10_regex_basic.js  11_regex_replace.js  12_regex_matchall.js  13_json_stringify.js  14_json_parse_roundtrip.js  15_equality_coercion.js  16_plus_coercion.js  17_typeof.js  18_sorting.js  19_array_string_joins.js  20_math_ops.js
parity-scripts/lang/: 01_closures.js  02_recursion.js  03_sorting.js  04_binary_search.js  05_classes.js  06_private_fields.js  07_prototypes.js  08_this_binding.js  09_destructuring.js  10_spread.js  11_generators.js  12_iterators.js  13_errors.js  14_labeled_loops.js  15_switch.js  16_operators.js  17_tagged_templates.js  18_closure_state.js  19_params.js  20_computed_props.js  21_optional_chaining.js
parity-scripts/stdlib/: 01_path.js  02_path_parse.js  03_url.js  04_url_legacy.js  05_querystring.js  06_buffer.js  07_buffer_ops.js  08_crypto_hash.js  09_crypto_hmac.js  10_util_format.js  11_util_inspect.js  12_os.js  13_events.js  14_string_decoder.js  15_punycode.js  16_zlib.js  17_child_process.js  18_assert.js  19_console.js  20_process.js  21_buffer_search.js  22_path_win32.js
src/: aot.rs  aot_native.rs  ast.rs  banner.rs  builtins.rs  cache.rs  cli.rs  compiler.rs  dap.rs  host.rs  lexer.rs  lib.rs  lsp.rs  main.rs  module.rs  parser.rs  regexp.rs  repl.rs  rust_ffi.rs
src/stdlib/: assert.rs  async_hooks.rs  buffer.rs  child_process.rs  cluster.rs  console.rs  crypto.rs  date.rs  dgram.rs  diagnostics_channel.rs  dns.rs  domain.rs  events.rs  fs.rs  fs_promises.rs  http.rs  http2.rs  https.rs  mod.rs  net.rs  node_module.rs  os.rs  path.rs  perf_hooks.rs  process.rs  punycode.rs  querystring.rs  readline.rs  repl.rs  stream.rs  stream_consumers.rs  stream_promises.rs  stream_web.rs  string_decoder.rs  timers.rs  tls.rs  trace_events.rs  tty.rs  typedarray.rs  url.rs  (+6 more)
tests/: es_parity.rs  ffi.rs  parity.rs
tests/data/: parity_expected.txt
